# fractal-explorer

./: .clang-format  CMakeLists.txt  README.md  build.sh  config.yaml  main.cpp  params.yaml  run_build.sh  yebuild.sh
include/: ConfigLoader.hpp  EventHandler.hpp  FractalBase.hpp  FractalSampler.hpp  Mandelbrot.hpp  Timer.hpp  Viewport.hpp
src/: ConfigLoader.cpp  EventHandler.cpp  FractalBase.cpp  FractalSampler.cpp  Mandelbrot.cpp  main.cpp  main_new.cpp  main_to_delete.cpp
